# cs-narrative-radar

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: sample_entities.csv
src/narrative_radar/: __init__.py  attention.py  cli.py  entities.py  hltv_comments.py  reddit.py
tests/: test_attention.py  test_cli_incremental.py  test_entities.py  test_hltv_comments.py
