[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cs-narrative-radar"
version = "0.1.0"
description = "Abnormal-attention index over Counter-Strike community signals (HLTV comments, Reddit)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "hyprcs" }]
dependencies = [
    "beautifulsoup4>=4.12",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
fast = ["lxml>=5.0"]   # ~10x HTML parse speedup on big comment threads

[project.scripts]
radar = "narrative_radar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
